# aidbg

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  launcher.py  pyproject.toml
aidbg/: __init__.py  __main__.py  analyze.py  classify.py  cli.py  launcher.py  netlist.py  simlog.py  wave.py
aidbg/core/: __init__.py  agent.py  cli.py  context.py  i18n.py  logs.py  models.py  netlist.py  primitives.py  registry.py  repo.py  report.py  wave.py
aidbg/skills/: __init__.py  glitch_triage.py  reg_data_mismatch.py  tranif_contention.py  uvm_env.py
aidbg/toolbox/: __init__.py  logs.py  models.py  primitives.py  repo.py  source.py  wave.py
configs/opencode/: opencode.jsonc
docs/: opencode-integration.md
profiles/apb-uvm/: AGENTS.md
profiles/mixed-signal/: AGENTS.md
samples/: analog_mux.v  assertions.json  ctrl.sv  report.example.ja.md  report.example.md  wave.txt
samples/apb/: README.md  wave.csv
samples/fixture/: build_fixture.sh
samples/fixture/bug/: ctrl.sv
samples/fixture/design/: assertions.json
samples/fixture/design/netlist/: analog_mux.v
samples/fixture/design/rtl/: ctrl.sv
samples/fixture/design/tb/: checker.sv  tb_top.sv
samples/fixture/sim/: wave.txt
samples/scenario_tb/: README.md  wave.txt
skills/: glitch-triage.md  reg-data-mismatch.md  tranif-contention.md  uvm-env.md
tests/: test_apb_scenario.py  test_fixture_attribution.py  test_i18n.py  test_launcher.py  test_opencode_config.py  test_parsers.py  test_plugin_discovery.py  test_primitives.py  test_scenario_tb.py  test_skills_samples.py
(+3 files in other folders)
